crates/pg_syntax/tests/snapshots/postgres_regress/truncate@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE trunc_fa (col2a text) INHERITS (trunc_f);
---
CreateStmt@0..54
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "trunc_fa"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..33
    Ident@23..28 "col2a"
    Whitespace@28..29 " "
    TypeName@29..33
      TextP@29..33 "text"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Inherits@35..43 "INHERITS"
  Whitespace@43..44 " "
  Ascii40@44..45 "("
  RangeVar@45..52
    Ident@45..52 "trunc_f"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

