crates/pg_syntax/tests/snapshots/postgres_regress/truncate@54.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO trunc_fa VALUES (3, 'three');"
---
InsertStmt@0..41
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "trunc_fa"
  Whitespace@20..21 " "
  SelectStmt@21..39
    Values@21..27 "VALUES"
    Whitespace@27..28 " "
    Ascii40@28..29 "("
    List@29..39
      AConst@29..30
        Iconst@29..30 "3"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..39
        Sconst@32..39 "'three'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

