crates/pg_syntax/tests/snapshots/postgres_regress/truncate@55.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE trunc_fb (col2b int) INHERITS (trunc_f);
---
CreateStmt@0..53
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "trunc_fb"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..32
    Ident@23..28 "col2b"
    Whitespace@28..29 " "
    TypeName@29..32
      IntP@29..32 "int"
  Ascii41@32..33 ")"
  Whitespace@33..34 " "
  Inherits@34..42 "INHERITS"
  Whitespace@42..43 " "
  Ascii40@43..44 "("
  RangeVar@44..51
    Ident@44..51 "trunc_f"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

