crates/pg_syntax/tests/snapshots/postgres_regress/truncate@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE trunc_faa (col3 text) INHERITS (trunc_fa);
---
CreateStmt@0..55
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "trunc_faa"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  ColumnDef@24..33
    Ident@24..28 "col3"
    Whitespace@28..29 " "
    TypeName@29..33
      TextP@29..33 "text"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Inherits@35..43 "INHERITS"
  Whitespace@43..44 " "
  Ascii40@44..45 "("
  RangeVar@45..53
    Ident@45..53 "trunc_fa"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

