crates/pg_syntax/tests/snapshots/postgres_regress/truncate@58.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO trunc_faa VALUES (5, 'five', 'FIVE');"
---
InsertStmt@0..49
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "trunc_faa"
  Whitespace@21..22 " "
  SelectStmt@22..47
    Values@22..28 "VALUES"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..47
      AConst@30..31
        Iconst@30..31 "5"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..39
        Sconst@33..39 "'five'"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..47
        Sconst@41..47 "'FIVE'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

