crates/pg_syntax/tests/snapshots/postgres_regress/truncate@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE truncate_a;
---
TruncateStmt@0..20
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..19
    Ident@9..19 "truncate_a"
  Ascii59@19..20 ";"

